Fix bottombar floating bug on mobile

--- a/src/components/BottomBar/bottomBar.scss
+++ b/src/components/BottomBar/bottomBar.scss
@@ -5,7 +5,7 @@
   height: 80px;
   width: 100%;
   min-width: 1280px;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   overflow: hidden;
